# centrifugo-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README_EN.md  compose.yml
.github/workflows/: ci.yml
conformance/: Cargo.toml
conformance/go-client/: go.mod  main.go
conformance/go-oracle/: README.md  build.sh
conformance/src/: lib.rs  oracle.rs
conformance/tests/: m0_smoke.rs  m10_jwks.rs  m10_proxy.rs  m11_admin.rs  m11_cli.rs  m11_env.rs  m11_metrics.rs  m12_live_sdk.rs  m13_user_channels.rs  m14_sub_refresh.rs  m15_server_side.rs  m16_presence_ttl.rs  m17_proxies.rs  m18_protobuf_api.rs  m19_publish_permission.rs  m1_golden.rs  m1_vertical.rs  m20_redis_sentinel.rs  m21_admin_ui.rs  m22_subscribe_validation.rs  m23_server_api.rs  m24_personal.rs  m25_go_rust_cluster.rs  m26_dropin.rs  m27_protocol_semantics.rs  m28_frame_coalescing.rs  m29_channel_limits.rs  m2_disconnect.rs  m2_protobuf.rs  m30_user_connection_limit.rs  m31_history_disable_for_client.rs  m32_allowed_origins.rs  m3_jwt.rs  m4_presence.rs  m5_history.rs  m6_api.rs  m6_namespaces.rs  m6_private.rs  m7_grpc.rs  m8_redis.rs  (+3 more)
crates/centrifugo-auth/: Cargo.toml
crates/centrifugo-auth/src/: claims.rs  error.rs  lib.rs  verifier.rs
crates/centrifugo-auth/tests/: rsa_ecdsa.rs
crates/centrifugo-auth/tests/fixtures/: ec_priv.pem  ec_pub.pem  rsa_priv.pem  rsa_pub.pem
crates/centrifugo-core/: Cargo.toml
crates/centrifugo-core/src/: client.rs  engine.rs  hub.rs  lib.rs  memory.rs  metrics.rs  node.rs  proxy.rs
crates/centrifugo-grpc/: Cargo.toml  build.rs
crates/centrifugo-grpc/proto/: api.proto
crates/centrifugo-grpc/src/: lib.rs
crates/centrifugo-grpc/tests/: generated_apipb.rs
crates/centrifugo-protocol/: Cargo.toml  build.rs
crates/centrifugo-protocol/proto/: control.proto
crates/centrifugo-protocol/src/: codec.rs  command.rs  convert.rs  disconnect.rs  error.rs  json.rs  lib.rs  messages.rs  method.rs  pb.rs  raw.rs
crates/centrifugo-protocol/tests/: generated_apipb.rs
crates/centrifugo-redis/: Cargo.toml
crates/centrifugo-redis/src/: lib.rs
crates/centrifugo-server/: Cargo.toml
crates/centrifugo-server/src/: admin.rs  api.rs  cli.rs  config.rs  grpc.rs  http.rs  main.rs  origin.rs  proxy_http.rs  sockjs.rs  webui.rs  ws.rs
docs/: COMPATIBILITY_v2.8.6.md  POSTAUDIT_v2.8.6.md
docs/reference/: protocol-v0.3.4-wire-format.md
docs/superpowers/plans/: 2026-06-26-m0-m1-foundation.md  2026-06-26-m2-protocol-parity.md  2026-06-26-m3-jwt-auth.md  2026-06-26-m8-redis-engine.md  2026-06-27-full-parity.md  2026-06-27-post-audit-features.md  2026-06-29-centrifugo-dropin-compat.md  2026-06-30-generated-apipb-tests.md
docs/superpowers/specs/: 2026-06-26-centrifugo-rust-design.md
