[package]
name = "conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
centrifugo-protocol = { path = "../crates/centrifugo-protocol" }
centrifugo-grpc = { path = "../crates/centrifugo-grpc" }
prost = "0.13"
tonic = "0.12"
jsonwebtoken = "9"
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.21"

[dev-dependencies]
tokio = { workspace = true }
