[package]
name = "conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
centrifugo-protocol = { path = "../crates/centrifugo-protocol" }
centrifugo-grpc = { path = "../crates/centrifugo-grpc" }
prost = "0.13"
tonic = "0.12"
jsonwebtoken = "9"
base64 = "0.22"
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
# rustls (match the server crate; keeps the whole workspace OpenSSL-free).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "http2", "charset"] }
tokio-tungstenite = "0.21"

[dev-dependencies]
tokio = { workspace = true }
