[package]
name = "centrifugo-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
centrifugo-protocol = { path = "../centrifugo-protocol" }
centrifugo-auth = { path = "../centrifugo-auth" }
async-trait = "0.1"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
