[package]
name = "centrifugo-redis"
version.workspace = true
edition.workspace = true
license.workspace = true

# Multi-node engine: cross-node fan-out via Redis PUB/SUB, atomic publish+history
# Lua, hash-based presence. Implements `centrifugo_core::Engine`.

[dependencies]
centrifugo-core = { path = "../centrifugo-core" }
centrifugo-protocol = { path = "../centrifugo-protocol" }
async-trait = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "sentinel"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
