[package]
name = "centrifugo-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "centrifugo"
path = "src/main.rs"

[dependencies]
centrifugo-protocol = { path = "../centrifugo-protocol" }
centrifugo-core = { path = "../centrifugo-core" }
centrifugo-auth = { path = "../centrifugo-auth" }
centrifugo-grpc = { path = "../centrifugo-grpc" }
centrifugo-redis = { path = "../centrifugo-redis" }
async-trait = "0.1"
tokio = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tonic = "0.12"
prost = "0.13"
